[gd_scene load_steps=7 format=3 uid="uid://dvsu0c77oxyp"]

[ext_resource type="Texture2D" uid="uid://dojfk300ggwh3" path="res://assets/textures/ui/size/size_back.png" id="1_hyip0"]
[ext_resource type="Script" path="res://scripts/size_meter.gd" id="1_wykus"]
[ext_resource type="Texture2D" uid="uid://b5e2jeq018vs5" path="res://assets/textures/ui/size/size_shinyA.png" id="2_5j5ec"]
[ext_resource type="Texture2D" uid="uid://bysnman3dwwsi" path="res://assets/textures/ui/size/size_shinyB.png" id="3_om05j"]
[ext_resource type="Texture2D" uid="uid://dp4412lkftgcc" path="res://assets/textures/ui/size/size_shinyC.png" id="4_rws3p"]
[ext_resource type="FontVariation" uid="uid://gfgnvtmg0njm" path="res://assets/fonts/hud.tres" id="5_n7pvg"]

[node name="SizeMeter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wykus")

[node name="OffsetBase" type="Control" parent="."]
custom_minimum_size = Vector2(320, 320)
layout_mode = 1
anchors_preset = 0
offset_right = 320.0
offset_bottom = 320.0
mouse_filter = 2

[node name="BGCircle" type="TextureRect" parent="OffsetBase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -301.0
offset_right = 301.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_hyip0")

[node name="MeterShapes" type="Control" parent="OffsetBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(160, 160)

[node name="MeterShape1" type="TextureRect" parent="OffsetBase/MeterShapes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -301.0
offset_right = 301.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(301, 301)
mouse_filter = 2
texture = ExtResource("2_5j5ec")

[node name="MeterShape2" type="TextureRect" parent="OffsetBase/MeterShapes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -301.0
offset_right = 301.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(301, 301)
mouse_filter = 2
texture = ExtResource("3_om05j")

[node name="MeterShape3" type="TextureRect" parent="OffsetBase/MeterShapes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -301.0
offset_right = 301.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(301, 301)
mouse_filter = 2
texture = ExtResource("4_rws3p")

[node name="MainCounter" type="RichTextLabel" parent="OffsetBase"]
layout_mode = 0
offset_left = 96.0
offset_top = 64.0
offset_right = 937.0
offset_bottom = 214.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0.366595, 0.366595, 0.366595, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("5_n7pvg")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[font_size=100]00km[font_size=90]00m[font_size=80]00cm[font_size=70]0mm"
fit_content = true
autowrap_mode = 0
